# tunnels

./: .gitignore  CLAUDE.md  Cargo.toml  LED_control.py  README.md  READMENEXT.md  animation.py  beam.py  beam_matrix_minder.py  beam_vault.py  draw_commands.capnp  draw_commands.proto  look.py  midi mapping notes.txt  run.py  run.sh  setup.py  show.cfg  show.yaml  timesync_stats.py  tunnel.py  tunnelz.py  util.py  waveforms.py
.github/workflows/: client.yml  controller.yml  release.yml  rust.yml
audio_vis/: CLAUDE.md  Cargo.toml
audio_vis/src/: lib.rs  main.rs  scrolling_plot.rs
bonsoir/: Cargo.toml
bonsoir/src/: browser.rs  lib.rs  multicast.rs  registration.rs  wire.rs
bootstrap-deploy/: Cargo.toml  local.tunnelbootstrap.plist
bootstrap-deploy/src/: main.rs
client_lib/: Cargo.toml
client_lib/src/: admin.rs  config.rs  lib.rs  transform.rs
console/: Cargo.toml
console/src/: admin_panel.rs  animation_panel.rs  audio_panel.rs  bootstrap_controller.rs  envelope_viewer.rs  lib.rs  main.rs  midi_panel.rs  projector_controller.rs  projector_panel.rs  ui_util.rs
controller_templates/: novation_remove_zero_sl_template.syx  pytunnel.touchosc  tunnels.touchosc
docs/: bootup_notes_may_2018.txt  installation.md  midi_map.csv  stick_build_notes.txt
dumbtunnel/: dumbtunnel.pde
gui_common/: Cargo.toml
gui_common/src/: audio_panel.rs  background_task.rs  clock_panel.rs  envelope_viewer.rs  lib.rs  log_status.rs  midi_panel.rs  scrolling_plot.rs  tracked.rs
midi_harness/: Cargo.toml
midi_harness/src/: device_change.rs  event.rs  lib.rs  select.rs
minusmq/: Cargo.toml
minusmq/src/: lib.rs  pub_sub.rs  req_rep.rs  wire.rs
projector-test/: Cargo.toml
projector-test/src/: main.rs
python_burndown/: animation.py  beam_matrix_minder.py  clock.py  devices.py  meta_mi.py  midi.py  midi_controllers.py  mixer.py  model_interface.py  render_server.py  show.py  tunnel.py  waveforms.pyx
resources/: Tunnels.icns
script/: taptest.py
scripts/: build-app.sh  build-universal.sh  bundle-app.sh  check-snapshots.sh  generate-icon-svg.py  generate-icon.sh  profile.py  test_pattern.py
stage_theme/: Cargo.toml
stage_theme/src/: lib.rs
touchOSC/: novation_remove_zero_sl_template.syx  pytunnel.touchosc
tunnel-bootstrap/: Cargo.toml  local.tunnelbootstrap.plist
tunnel-bootstrap/src/: child.rs  main.rs
tunnelclient/: Cargo.toml  local.tunnelclient.plist  tunnelclient.pde
tunnelclient/cfg/: monitor.yaml  monitor_1080.yaml  monitor_sx.yaml  test.yaml
tunnelclient/src/: admin_gui.rs  bootstrap_controller.rs  config.rs  draw.rs  interpolate.rs  lib.rs  main.rs  projector.rs  receive.rs  remote.rs  render.rs  serde_types.in.rs  serde_types.rs  show.rs  snapshot_manager.rs  sntp_service.rs  timesync.rs  traits.rs  utils.rs
tunnelclient/tests/: visual_snapshot.rs
tunnelclient/tests/software_graphics/: mod.rs
tunnelclient_control/: Cargo.toml
tunnelclient_control/src/: main.rs
tunnels/: Cargo.toml
tunnels/benches/: my_benchmark.rs
tunnels/src/: animation.rs  animation_target.rs  animation_visualizer.rs  audio.rs  beam.rs  beam_matrix_minder.rs  beam_store.rs  clock.rs  clock_bank.rs  clock_server.rs  control.rs  device.rs  gui_state.rs  lib.rs  look.rs  main.rs  master_ui.rs  midi.rs  midi_controls.rs  mixer.rs  numbers.rs  osc.rs  palette.rs  position_bank.rs  send.rs  show.rs  test_mode.rs  timesync.rs  transient_indicator.rs  tunnel.rs  typed_index.rs  ui.rs  waveforms.rs
tunnels/src/audio/: CLAUDE.md  log_scale.rs  mod.rs  processor.rs  reconnect.rs  tkeo.rs
tunnels/src/midi_controls/: animation.rs  animation_target.rs  audio.rs  clock.rs  device.rs  master_ui.rs  mixer.rs  tunnel.rs
tunnels/src/snapshots/: midi_emit_expectations.yaml  midi_interpret_expectations.yaml  tunnels__show__test__after_evolution.snap  tunnels__show__test__before_evolution.snap
tunnels_audio/: Cargo.toml
tunnels_audio/src/: band_steering.rs  hilbert.rs  lib.rs  log_scale.rs  processor.rs  reconnect.rs  ring_buffer.rs  running_median.rs  spectral.rs  wavelet.rs
tunnels_gui/: Cargo.toml
tunnels_gui/src/: audio_panel.rs  lib.rs  main.rs  midi_panel.rs  ui_util.rs
tunnels_lib/: Cargo.toml
tunnels_lib/src/: bootstrap.rs  color.rs  lib.rs  notified.rs  number.rs  projector.rs  prompt.rs  repaint.rs  smooth.rs  transient_indicator.rs
tunnelz/: LED_control.py  __init__.py  akai_apc40.py  animation.py  beam.py  beam_matrix_minder.py  button_LED.py  clock.py  color.py  devices.py  draw_commands.py  draw_commands_pb2.py  draw_commands_wrapper.py  geometry.py  look.py  meta_mi.py  meta_ui.py  midi.py  midi_controller.py  midi_controllers.py  mixer.py  model_interface.py  ntp_server.py  render_server.py  shapes.py  show.py  timesync.py  tunnel.py  tunnelz.py  ui.py  util.py  waveforms.py  waveforms.pyx  waveforms_purepython.py
tunnelz/test/: __init__.py  test_show.py  test_user_interface.py
zero_configure/: Cargo.toml
zero_configure/src/: bare.rs  lib.rs  msgpack.rs  pub_sub.rs  req_rep.rs
zeroconf/src/: main.rs
zeroconf_client/: Cargo.toml
zeroconf_client/src/: main.rs
zeroconf_test/: Cargo.toml
zeroconf_test/src/: main.rs
