[workspace]
resolver = "3"
members = [
    "tunnels_lib",
    "tunnels",
    "tunnelclient",
    "tunnel-bootstrap",
    "zero_configure",
    "midi_harness",
    "stage_theme",
    "gui_common",
    "console",
    "client_lib",
    "minusmq",
    "bonsoir",
    "bootstrap-deploy",
    "projector-test",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "^1", features = ["derive", "rc"] }
log = "0.4"
derive_more = { version = "2", features = ["full"] }
simplelog = "0.12"
lazy_static = "1"
rmp-serde = "1"
anyhow = "1"
