[package]
name = "audio_vis"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "audio_vis"
path = "src/main.rs"

[dependencies]
tunnels_audio = { path = "../tunnels_audio" }
tunnels_lib = { path = "../tunnels_lib" }
gui_common = { path = "../gui_common" }
stage_theme = { path = "../stage_theme" }
eframe = "0.33"
egui_plot = "0.34"
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
