[package]
name = "console"
version = "0.1.0"
edition = "2021"

[dependencies]
tunnels = { path = "../tunnels" }
tunnels_lib = { path = "../tunnels_lib" }
client_lib = { path = "../client_lib" }
midi_harness = { path = "../midi_harness" }
stage_theme = { path = "../stage_theme" }
gui_common = { path = "../gui_common" }
eframe = "0.33"
anyhow = "1"
log = "0.4"
simplelog = "0.12"
rmp-serde = { workspace = true }
sha2 = "0.10"
zero_configure = { path = "../zero_configure" }
hostname = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2"
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
tunnels = { path = "../tunnels", features = ["test-support"] }
