[package]
name = "gui_common"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = "0.4"
eframe = "0.33"
egui_plot = "0.34"
itertools = "0.12"
log = "0.4"
midi_harness = { path = "../midi_harness" }
tunnels_audio = { path = "../tunnels_audio" }
tunnels_lib = { path = "../tunnels_lib" }

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }
