[package]
name = "tunnel-bootstrap"
version = "0.1.0"
authors = ["Chris Macklin <chris.macklin@gmail.com>"]
edition.workspace = true

[dependencies]
rmp-serde.workspace = true
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true

sha2 = "0.10"

zero_configure = { path = "../zero_configure" }
tunnels_lib = { path = "../tunnels_lib" }

[dev-dependencies]
tempfile = "3"
