[package]

name = "tunnelclient"
version = "0.1.0"
authors = ["Chris Macklin <chris.macklin@gmail.com>"]
edition.workspace = true

[lib]
name = "tunnelclient"
path = "src/lib.rs"

[[bin]]
name = "tunnelclient"

[dependencies]
rmp-serde.workspace = true
log.workspace = true
simplelog.workspace = true
anyhow.workspace = true
piston_window = "0.132"
piston2d-graphics = "0.45"
piston2d-opengl_graphics = "0.89"
pistoncore-sdl2_window = "0.71"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }
serialport = "4"
tunnels_lib = { path = "../tunnels_lib" }
client_lib = { path = "../client_lib" }
minusmq = { path = "../minusmq" }
zero_configure = { path = "../zero_configure" }

[dev-dependencies]
image = "0.24"
tunnels = { path = "../tunnels" }
