[package]
name = "tunnels"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2021"

[lib]
name = "tunnels"
path = "src/lib.rs"

[[bin]]
name = "tunnels"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
log.workspace = true
simplelog.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
zmq.workspace = true
anyhow.workspace = true
rmp-serde.workspace = true

midir = "0.9.1"
rosc = "0.9.1"

typed_index_derive = "0.1.4"

tunnels_lib = { path = "../tunnels_lib" }
zero_configure = { path = "../zero_configure" }

# Audio subsystem
cpal = "0.15.1"
augmented-dsp-filters = "1.3.1"
audio-processor-analysis = "0.4.0"
audio-processor-traits = "2.2.0"
augmented-atomics = "0.1.1"
itertools = "0.10.5"


[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
plotters = "^0.3.0"
