[package]
name = "tunnels"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2021"

[lib]
name = "tunnels"
path = "src/lib.rs"

[[bin]]
name = "tunnels"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
log.workspace = true
simplelog.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
zmq.workspace = true
anyhow.workspace = true
rmp-serde.workspace = true

midir = "0.10"
rosc = "0.11"
noise = "0.9.0"

typed_index_derive = "0.1.4"
itertools = "0.14"

tunnels_lib = { path = "../tunnels_lib" }
zero_configure = { path = "../zero_configure" }

# Audio subsystem
cpal = "0.16"
augmented-dsp-filters = "2"
audio-processor-analysis = "2"
audio-processor-traits = "4"
augmented-atomics = "0.2"


[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
plotters = "^0.3.0"
