[package]
name = "tunnels"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition.workspace = true

[features]
test-support = []

[lib]
name = "tunnels"
path = "src/lib.rs"

[[bin]]
name = "tunnels"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
serde.workspace = true
log.workspace = true
simplelog.workspace = true
derive_more.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
rmp-serde.workspace = true

rosc = "0.11"
noise = "0.9.0"

egui_plot = "0.34"
eframe = "0.33"
arc-swap = "1"

midi_harness = { path = "../midi_harness" }
tunnels_lib = { path = "../tunnels_lib" }
zero_configure = { path = "../zero_configure" }
minusmq = { path = "../minusmq" }

# Audio subsystem
tunnels_audio = { path = "../tunnels_audio" }

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
plotters = "^0.3.0"
serde_yaml = "0.9"
