[package]
name = "tunnels_lib"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
derive_more = "^0.99"
num-traits = "^0.2"
ordered-float = "^2.0"