[package]
name = "tunnels_lib"
version = "0.1.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
ordered-float = "5"
number = { git = "https://github.com/generalelectrix/number", branch = "main" }
anyhow = "1"
