[package]
name = "zero_configure"
version = "0.1.0"
authors = ["Chris Macklin <chris.macklin@gmail.com>"]
edition = "2021"

[dependencies]
async-dnssd = "^0.4"
tokio-core = "^0.1"
futures = "^0.1"
serde.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true
minusmq = { path = "../minusmq" }
log = "0.4"
