[package]
name = "zero_configure"
version = "0.1.0"
authors = ["Chris Macklin <chris.macklin@gmail.com>"]
edition = "2021"

[dependencies]
bonsoir = { path = "../bonsoir" }
hostname = "0.4"
serde.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true
log.workspace = true
minusmq = { path = "../minusmq" }

[dev-dependencies]
env_logger = "0.11"
